--- a/riskCOVID/local.css
+++ b/riskCOVID/local.css
@@ -43,7 +43,7 @@ body, html {
 }
 
 
-body{
+nav{
     background-color: #193c6d;
     filter: progid: DXImageTransform.Microsoft.gradient(gradientType=1, startColorstr='#003073', endColorstr='#029797');
     background-image: url(//img.alicdn.com/tps/TB1d.u8MXXXXXXuXFXXXXXXXXXX-1900-790.jpg);
@@ -58,6 +58,10 @@ body{
     color: white;
 }
 
+body{
+    background-color: white;
+}
+
 .navbar{
     padding-bottom: 5px;
     padding-left: 2vw;
@@ -68,6 +72,7 @@ body{
     font-family: "Roboto";
     font-weight: 900;
     text-align: center;
+    margin-bottom: 5px;
 }
 .navbar-brand{
     display: inline-block;
@@ -191,6 +196,7 @@ body{
 }
 
 #scaleBox{
+    padding-top: 10px;
     text-align: center;
 
 }
@@ -200,7 +206,7 @@ body{
 }
 
 .card-body{
-    padding: 10px;
+    padding: 20px;
 }
 .card-header{
     background-color: #f8f8f8;
@@ -217,4 +223,65 @@ body{
 
 #riskStripesDesc p{
     font-family: Roboto;
+}
+
+#govAdvice{
+    list-style-type: none;
+    font-size: 15px;
+    padding-left: 0;
+}
+#symptoms{
+    list-style-type: none;
+    font-size: 15px;
+    padding-left: 0;
+}
+
+#action{
+    padding-left: 20px;
+    font-size: 15px;
+}
+#test{
+    text-align: center;
+    font-size: 30px;
+    text-decoration: underline;
+}
+
+#right_main ul#mainAdvice{
+    height:250px;
+    width:350px;
+    overflow:hidden;
+    margin-left:25px;
+}
+
+#mainAdvice li#gov{
+    background: url("img/govuk-icon.svg") no-repeat 0 center;
+    background-size: 35px 35px;
+    padding-left: 45px;
+}
+
+#mainAdvice li#advice1{
+    background: url("img/face-mask.svg") no-repeat 0 center;
+    background-size: 35px 35px;
+    padding-left: 45px;
+}
+
+#mainAdvice li#advice2{
+    background: url("img/train-public-transport.svg") no-repeat 0 center;
+    background-size: 35px 35px;
+    padding-left: 45px;
+}
+
+#mainAdvice li#advice3{
+    background: url("img/social-distancing.svg") no-repeat 0 center;
+    background-size: 35px 35px;
+    padding-left: 45px;
+}
+
+#date{
+    text-align: center;
+    font-weight: lighter;
+    font-family: "Source Code Pro";
+    font-size: 15px;
+    color: #7e7e7e;
+    margin-bottom: 5px;
 }
